<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.UndecidedPickRoleActivity"
    android:weightSum="1">



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary"
        android:layout_weight="1.16">

        <ImageView
            android:layout_width="173dp"
            android:layout_height="239dp"
            android:id="@+id/imageView"
            android:src="@drawable/ic_call_end_white_24px"
            android:layout_gravity="center_horizontal" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_name"
            android:id="@+id/textView"
            android:textSize="40dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/textContrast"
            android:layout_marginBottom="80dp"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/undecided_pickrole_iwanttohelp"
            android:id="@+id/help" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text = "@string/undecided_pickrole_ineedhelp"
            android:id="@+id/getHelp" />
    </LinearLayout>




</LinearLayout>