<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.TranslatorIsReadyActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="0dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".activities.UserHomeScreenActivity">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="35dp"
            android:text = "@string/translator_main_thank_you"
            android:layout_marginLeft="16dp"
            android:id="@+id/textView6"
            android:gravity="center_vertical|center_horizontal"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="121dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text = "@string/translator_main_instructions_main"
            android:layout_marginLeft="0dp"
            android:layout_below="@+id/textView6"
            android:layout_marginTop="62dp"
            android:id="@+id/textView7"
            android:gravity="center"
            android:textSize="20dp"
            android:padding="20dp"
            android:layout_alignParentStart="true" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/translator_main_edit_languages"
            android:id="@+id/helpButton"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:background="#05AE00" />

    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>